--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,14 @@ cache:
 script:
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      docker run --rm --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') -v ${PWD}:/project -v ~/.cache/electron:/root/.cache/electron -v ~/.cache/electron-builder:/root/.cache/electron-builder electronuserland/builder:wine /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+      echo "ello"
+      # docker run --rm \
+      #   --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+      #   -v ${PWD}:/project \
+      #   -v ~/.cache/electron:/root/.cache/electron \
+      #   -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+      #   electronuserland/builder:wine \
+      #   /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
     else
       yarn release
     fi
